[package]
name = "streameme_backend"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-cors = "0.7.1"
actix-multipart = "0.7.2"
actix-web = "4.11.0"
clap = "4.5.48"
env_logger = "0.11.8"
log = "0.4.28"
mime = "0.3.17"
serde = { version = "1.0.225", features = ["derive"] }
serde_json = "1.0.145"
serde_repr = "0.1.20"
tempfile = "3.22.0"
time = { version = "0.3.44", features = ["serde-human-readable"] }
tokio = { version = "1.47.1", features = ["process", "fs"] }
